name:                gdp
version:             0.0.3.0
synopsis:            Reason about invariants and preconditions with ghosts of departed proofs.
description:         Reason about invariants and preconditions with ghosts of departed proofs.
                     The GDP library implements building blocks for creating and working with
                     APIs that may carry intricate preconditions for proper use. As a library
                     author, you can use `gdp` to encode your API's preconditions and invariants,
                     so that they will be statically checked at compile-time.
                     As a library user, you can use the `gdp` deduction rules to codify your
                     proofs that you are using the library correctly.
homepage:            https://github.com/matt-noonan/gdp#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Noonan
maintainer:          matt.noonan@gmail.com
copyright:           (c) 2018 Matt Noonan
category:            Safe
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GDP
                     , Data.Arguments
                     , Data.Refined
                     , Data.The
                     , Logic.Classes
                     , Logic.Implicit
                     , Logic.NegClasses
                     , Logic.Propositional
                     , Logic.Proof
                     , Theory.Equality
                     , Theory.Named
                     , Theory.Lists
                     
  build-depends:       base >= 4.7 && < 5
                     , lawful
                     
  default-language:    Haskell2010

executable gdp
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gdp
                     
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matt-noonan/gdp
